# ambient

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  regtest.sh
.github/workflows/: ci.yml  release.yml
bdk_bitcoind_rpc-0.22.0/: .cargo_vcs_info.json  Cargo.toml
bdk_bitcoind_rpc-0.22.0/src/: lib.rs
bdk_chain-0.23.2/: .cargo_vcs_info.json  Cargo.toml
bdk_chain-0.23.2/src/: local_chain.rs
bdk_wallet-2.2.0/: .cargo_vcs_info.json  Cargo.toml
bdk_wallet-2.2.0/src/wallet/: mod.rs
docs/: AMBIENT_UTXO_MANAGEMENT.md  APPIMAGE_BUILD.md  ENCRYPTED_STORAGE.md  PROTOCOL.md  SNICKER_RECOVERY.md
scripts/: README.md  build-appimage.sh  regtest_helpers.sh  start-test-relay.sh  start_regtest.sh
src/: automation.rs  blockchain_data.rs  config.rs  encryption.rs  fee.rs  gui_main.rs  lib.rs  main.rs  manager.rs  partial_utxo_set.rs  signer.rs  ui.rs  utils.rs  wallet_node.rs
src/cli/: mod.rs  repl.rs
src/gui/: app.rs  message.rs  mod.rs  modal.rs  state.rs  status_layer.rs  theme.rs
src/gui/views/: generate_wallet.rs  mod.rs  no_wallet.rs  settings.rs  wallet_loaded.rs
src/gui/views/modals/: accept_proposal_dialog.rs  generate_wallet_wizard.rs  mod.rs  open_wallet_dialog.rs  settings_dialog.rs
src/gui/widgets/: mod.rs  modal_overlay.rs
src/network/: embedded_relay.rs  file_based.rs  mod.rs  nostr.rs  serialization.rs  test_relay.rs
src/snicker/: mod.rs  pattern.rs  tweak.rs  tweak_tests.rs  validation_tests.rs
src/wallet_node/: coin_selection.rs  mod.rs  tx_builder.rs
tests/: README.md  integration_test.rs  nostr_integration.rs  regtest_snicker.rs  test_snicker_spending.rs
tests/common/: mod.rs
