[package]
name = "ambient"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
gui = ["iced"]

[dependencies]
bdk_kyoto = { version = "0.13.1" }
bdk_wallet = { version = "2.2.0", features = ["rusqlite", "keys-bip39"] }
bdk_bitcoind_rpc = "0.15"
tokio = { version = "1", features = ["full"], default-features = false }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
directories = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
hex = "0.4"

# GUI dependencies (optional)
iced = { version = "0.13.1", optional = true }

[dev-dependencies]
tempfile = "3"
once_cell = "1"
ureq = { version = "2", features = ["json"] }
which = "6"
base64 = "0.22"
serde_json = "1"
hex = "0.4"
