[package]
name = "ambient"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
gui = ["iced", "async-std", "rfd"]
test-utils = ["nostr-relay-builder", "nostr-lmdb"]

[dependencies]
bdk_kyoto = { version = "0.15.3" }
bdk_wallet = { version = "2.2.0", features = ["rusqlite", "keys-bip39"] }
bdk_bitcoind_rpc = "0.15"
tokio = { version = "1", features = ["full"], default-features = false }
tracing = { version = "0.1" }
rusqlite = { version = "0.31", features = ["backup"] }

# Encryption
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"

# CLI password input
dialoguer = "0.11"

# Temp file handling
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
directories = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hex = "0.4"

# Fee estimation and blockchain data API
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
async-trait = "0.1"

# Async utilities for network layer
futures = "0.3"
async-stream = "0.3"

# File watching for proposal directory
notify = "6.1"

# Nostr network backend
nostr-sdk = "0.37"

# GUI dependencies (optional)
iced = { version = "0.13.1", optional = true }
async-std = { version = "1.12", optional = true }
rfd = { version = "0.15", optional = true }

# Test utilities (optional, for embedded relay)
nostr-relay-builder = { git = "https://github.com/rust-nostr/nostr", package = "nostr-relay-builder", optional = true }
nostr-lmdb = { git = "https://github.com/rust-nostr/nostr", package = "nostr-lmdb", optional = true }

[dev-dependencies]
tempfile = "3"
once_cell = "1"
ureq = { version = "2", features = ["json"] }
which = "6"
base64 = "0.22"
serde_json = "1"
hex = "0.4"
tokio-stream = "0.1"

[[bin]]
name = "ambient-cli"
path = "src/main.rs"

[[bin]]
name = "ambient-gui"
path = "src/gui_main.rs"
required-features = ["gui"]

[[bin]]
name = "ambient-relay"
path = "src/bin/ambient-relay.rs"
required-features = ["test-utils"]
